recipe detail on mobile fixed

--- a/src/css/RecipeDetailRoute.module.css
+++ b/src/css/RecipeDetailRoute.module.css
@@ -1,3 +1,7 @@
+.card {
+  margin-top: 5rem;
+}
+
 .title {
   margin: 1rem;
   text-align: center;
